--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,9 @@
       <h1>Portfolio</h1>
 
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Word Guess">
+        <a  href="https://phillipsturm.github.io/Psychic-Game/"> 
+          <img src="assets/images/cpuBrain.jpg" alt="Word Guess">
+        </a>  
 
         <h3>Word Guess</h3>
       </div>
