--- a/portfolio.html
+++ b/portfolio.html
@@ -32,12 +32,16 @@
         <h3>Word Guess</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
-
-        <h3>RPG Game</h3>
-      </div>
+          <a  href="https://phillipsturm.github.io/unit-4-game/"> 
+            <img src="assets/images/crystal.jpg" alt="RPG Game">
+          </a>  
+  
+          <h3>RPG Game</h3>
+        </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
+          <a  href="https://phillipsturm.github.io/TriviaGame/"> 
+            <img src="assets/images/trivia.jpg" alt="Trivia Game">
+          </a>
 
         <h3>Trivia Game</h3>
       </div>
