--- a/portfolio.html
+++ b/portfolio.html
@@ -46,15 +46,13 @@
         <h3>Trivia Game</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
+        <a  href="https://phillipsturm.github.io/Giphy-API/"> 
+          <img src="assets/images/dunk.jpg" alt="GIF Search">
+        </a>  
 
-        <h3>Rutgers Info Widget</h3>
+        <h3>GIF Search!</h3>
       </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
-
-        <h3>Rock Paper Scissors</h3>
-      </div>
+      
 
     </section>
 
