--- a/portfolio.html
+++ b/portfolio.html
@@ -52,6 +52,10 @@
 
         <h3>GIF Search!</h3>
       </div>
+      <div class="work"> 
+          <img src="assets/images/Liri.jpg" alt="Liri Search">  
+           <h3>Liri Search!</h3>
+      </div>
       
 
     </section>
